📱 Mobile view: Background images added to 'YouTube' and 'Contact' sections, some unused assets removed

--- a/src/index.html
+++ b/src/index.html
@@ -585,20 +585,27 @@
         </article>
       </section>
     </main>
+
     <footer class="footer">
       <h2 class="footer_heading heading heading_xl heading_streamster">
         Follow me
       </h2>
       <div class="footer__socials">
-        <a class="footer__social-link" href="https://github.com/neonghostdev">
+        <a
+          class="footer__social-link"
+          target="_blank"
+          href="https://github.com/neonghostdev"
+        >
           <img
             class="footer__social-logo"
             src="assets/icons/github_blue.png"
             alt="github logo"
           />
         </a>
+
         <a
           class="footer__social-link"
+          target="_blank"
           href="https://www.linkedin.com/in/jeanpaul-erazo-garcia-260182a6/"
         >
           <img
@@ -609,6 +616,7 @@
         </a>
         <a
           class="footer__social-link"
+          target="_blank"
           href="https://www.instagram.com/neonghostdev/"
         >
           <img
@@ -619,6 +627,7 @@
         </a>
         <a
           class="footer__social-link"
+          target="_blank"
           href="https://www.youtube.com/channel/UCioHXaF2-XV-cUT6uuah-ng"
         >
           <img
