📱 Mobile view: 'Header' blur background styles added

--- a/src/index.html
+++ b/src/index.html
@@ -29,19 +29,22 @@
     <script src="./js/style.js" defer></script>
     <title>Neon Ghost Dev</title>
   </head>
+
   <body>
     <header class="header">
-      <img
-        src="./assets/images/neon_ghost_logo_v2.png"
-        alt="logo"
-        class="header__logo"
-      />
-      <img
-        id="burgerIcon"
-        class="header__burger-icon"
-        src="./assets/icons/menu_gradient_blue_ligth.png"
-        alt="menu"
-      />
+      <div class="header__icons-container">
+        <img
+          src="./assets/images/neon_ghost_logo_v2.png"
+          alt="logo"
+          class="header__logo"
+        />
+        <img
+          id="burgerIcon"
+          class="header__burger-icon"
+          src="./assets/icons/menu_gradient_blue_light.png"
+          alt="menu"
+        />
+      </div>
       <nav class="mobile-menu mobile-menu--hidden" id="mobileMenu">
         <img
           id="closeMenuIcon"
