📱 Mobile view: link icon added to youtube video cards

--- a/src/index.html
+++ b/src/index.html
@@ -466,14 +466,24 @@
               <h3 class="youtube__video-title heading heading_quicksand">
                 <strong> ¿Puedo ser PROGRAMADOR? Aquí comienza todo... </strong>
               </h3>
-              <div class="youtube__video-data">
-                <p class="paragraph youtube__video-date">2 Months ago</p>
-                <p class="paragraph youtube__video-views">
-                  <strong>12.567 Views</strong>
-                </p>
+              <div class="youtube__video-data-container">
+                <div class="youtube__video-data">
+                  <p class="paragraph youtube__video-date">2 Months ago</p>
+                  <p class="paragraph youtube__video-views">
+                    <strong>12.567 Views</strong>
+                  </p>
+                </div>
+                <div class="youtube__link-icon-container">
+                  <img
+                    class="youtube__link-icon"
+                    src="assets/icons/link_icon_blue.png"
+                    alt="link icon"
+                  />
+                </div>
               </div>
             </div>
           </a>
+
           <a
             href="http://google.com"
             target="_blank"
@@ -492,14 +502,24 @@
                   todo...
                 </strong>
               </h3>
-              <div class="youtube__video-data">
-                <p class="paragraph youtube__video-date">5 Months ago</p>
-                <p class="paragraph youtube__video-views">
-                  <strong>12.567 Views</strong>
-                </p>
+              <div class="youtube__video-data-container">
+                <div class="youtube__video-data">
+                  <p class="paragraph youtube__video-date">2 Months ago</p>
+                  <p class="paragraph youtube__video-views">
+                    <strong>12.567 Views</strong>
+                  </p>
+                </div>
+                <div class="youtube__link-icon-container">
+                  <img
+                    class="youtube__link-icon"
+                    src="assets/icons/link_icon_blue.png"
+                    alt="link icon"
+                  />
+                </div>
               </div>
             </div>
           </a>
+
           <a
             href="http://google.com"
             target="_blank"
@@ -518,11 +538,20 @@
                   todo...Aquí comienza todo...Aquí comienza todo...
                 </strong>
               </h3>
-              <div class="youtube__video-data">
-                <p class="paragraph youtube__video-date">1 Year ago</p>
-                <p class="paragraph youtube__video-views">
-                  <strong>12.567 Views</strong>
-                </p>
+              <div class="youtube__video-data-container">
+                <div class="youtube__video-data">
+                  <p class="paragraph youtube__video-date">2 Months ago</p>
+                  <p class="paragraph youtube__video-views">
+                    <strong>12.567 Views</strong>
+                  </p>
+                </div>
+                <div class="youtube__link-icon-container">
+                  <img
+                    class="youtube__link-icon"
+                    src="assets/icons/link_icon_blue.png"
+                    alt="link icon"
+                  />
+                </div>
               </div>
             </div>
           </a>
