📱 Mobile view: Navigation bar background styles toggle added

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,9 @@
 
   <body>
     <header class="header">
-      <div class="header__icons-container">
+      <div
+        class="header__icons-container header__icons-container--no-background"
+      >
         <img
           src="./assets/images/neon_ghost_logo_v2.png"
           alt="logo"
