📱 Mobile view: Links to each section added to the navigation bar

--- a/src/index.html
+++ b/src/index.html
@@ -56,16 +56,16 @@
         />
         <ul class="mobile-menu__list">
           <li class="mobile-menu__item">
-            <a href="" class="mobile-menu__link">About Me</a>
+            <a href="#about" class="mobile-menu__link">About Me</a>
           </li>
           <li class="mobile-menu__item">
-            <a href="" class="mobile-menu__link">Experience</a>
+            <a href="#experience" class="mobile-menu__link">Experience</a>
           </li>
           <li class="mobile-menu__item">
-            <a href="" class="mobile-menu__link">YouTube</a>
+            <a href="#youtube" class="mobile-menu__link">YouTube</a>
           </li>
         </ul>
-        <a href="#" class="mobile-menu__button">Contact</a>
+        <a href="#contact" class="mobile-menu__button">Contact</a>
       </nav>
     </header>
 
@@ -352,7 +352,7 @@
         </article>
       </section>
 
-      <section class="experience section">
+      <section id="experience" class="experience section">
         <article class="experience__title-container article">
           <h1 class="heading heading_xl heading_streamster">Experience</h1>
         </article>
@@ -433,7 +433,7 @@
         </article>
       </section>
 
-      <section class="youtube section">
+      <section id="youtube" class="youtube section">
         <article class="youtube__title-container article">
           <h1 class="heading heading_xl heading_streamster">YouTube</h1>
         </article>
@@ -560,7 +560,7 @@
         </article>
       </section>
 
-      <section class="contact section">
+      <section id="contact" class="contact section">
         <article class="contact__title-container article">
           <h1 class="heading heading_xl heading_streamster">Contact me</h1>
         </article>
