📱 Mobile view: link added to the logo

--- a/src/index.html
+++ b/src/index.html
@@ -35,11 +35,13 @@
       <div
         class="header__icons-container header__icons-container--no-background"
       >
-        <img
-          src="./assets/images/neon_ghost_logo_v2.png"
-          alt="logo"
-          class="header__logo"
-        />
+        <a class="header__logo-link" href="/">
+          <img
+            src="./assets/images/neon_ghost_logo_v2.png"
+            alt="logo"
+            class="header__logo"
+          />
+        </a>
         <img
           id="burgerIcon"
           class="header__burger-icon"
