🖥  Desktop view: 1366px width breakpoint added, 'Hero' section background darkness aumented and title triangle and font size adjusted, scrollbars style changed

--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,13 @@
     />
     <link
       rel="stylesheet"
-      href="./css/desktop.css"
+      href="./css/desktop-s.css"
       media="screen and (min-width: 1024px)"
+    />
+    <link
+      rel="stylesheet"
+      href="./css/desktop.css"
+      media="screen and (min-width: 1366px)"
     />
     <script src="./js/style.js" defer></script>
     <title>Neon Ghost Dev</title>
@@ -133,7 +138,7 @@
                 color-interpolation-filters="sRGB"
               >
                 <feGaussianBlur
-                  stdDeviation="51 24"
+                  stdDeviation="25 24"
                   x="0%"
                   y="0%"
                   width="100%"
@@ -154,7 +159,7 @@
                 color-interpolation-filters="sRGB"
               >
                 <feGaussianBlur
-                  stdDeviation="28 17"
+                  stdDeviation="20 17"
                   x="0%"
                   y="0%"
                   width="100%"
@@ -235,7 +240,7 @@
                 color-interpolation-filters="sRGB"
               >
                 <feGaussianBlur
-                  stdDeviation="51 24"
+                  stdDeviation="25 24"
                   x="0%"
                   y="0%"
                   width="100%"
@@ -256,7 +261,7 @@
                 color-interpolation-filters="sRGB"
               >
                 <feGaussianBlur
-                  stdDeviation="28 17"
+                  stdDeviation="20 17"
                   x="0%"
                   y="0%"
                   width="100%"
@@ -293,19 +298,15 @@
         </article>
 
         <article class="hero__scroll-button-container">
+          <img
+            class="hero__scroll-arrow-down"
+            src="./assets/icons/down_arrow_blue_gradient.png"
+            alt=""
+          />
           <a href="#about" class="hero__scroll-button">
             <span>SCROLL DOWN</span>
           </a>
-          <img
-            class="hero__scroll-arrow-down"
-            src="./assets/icons/down_arrow_blue_gradient.png"
-            alt=""
-          />
-          <img
-            class="hero__scroll-arrow-down"
-            src="./assets/icons/down_arrow_blue_gradient.png"
-            alt=""
-          />
+
           <img
             class="hero__scroll-arrow-down"
             src="./assets/icons/down_arrow_blue_gradient.png"
