🖥  Desktop view: 'About me' section basic layout and styles set

--- a/src/index.html
+++ b/src/index.html
@@ -195,7 +195,7 @@
           </svg>
         </article>
 
-        <article class="hero__article hero_article--secondary">
+        <article class="hero__article hero__article--secondary hidden">
           <div class="hero__title-container">
             <h1 class="hero__main-title">
               <span class="hero__main-greeting">Also known as...</span>
@@ -316,7 +316,7 @@
       </section>
 
       <section id="about" class="about section">
-        <article class="about__container">
+        <article class="about__content-container">
           <h1 class="about__heading heading heading_xl heading_streamster">
             About me
           </h1>
@@ -335,10 +335,10 @@
             that need to solve their problems through technology.
           </p>
           <p class="paragraph">
-            I am also exploring the world of content creation to share
-            knowledge, mostly with Latin American people, to let them know that
-            they can find their way in the technology industry and thus improve
-            their lives, and the lives of their families as well.
+            I'm also exploring the world of content creation to share knowledge,
+            mostly with Latin American people, to let them know that they can
+            find their way in the technology industry and thus improve their
+            lives, and the lives of their families as well.
           </p>
           <div class="about__technologies-used">
             <p class="paragraph">
