🖥  Desktop view: 'Experience' section basic layout added

--- a/src/index.html
+++ b/src/index.html
@@ -372,7 +372,9 @@
 
       <section id="experience" class="experience section">
         <article class="experience__title-container article">
-          <h1 class="heading heading_xl heading_streamster">Experience</h1>
+          <h1 class="heading heading_xl heading_streamster section-heading">
+            Experience
+          </h1>
         </article>
 
         <article class="experience__companies article">
@@ -389,44 +391,47 @@
             I have worked for some companies and also worked on some freelance
             projects, here are some of the most recent ones:
           </p>
-          <div class="experience__entry">
-            <h2 class="experience__entry-title heading_s heading_quicksand">
-              Customer Support & Web Master
-              <a
-                href="https://www.codescrum.com/"
-                target="_blank"
-                rel="noopener noreferrer"
-                class="link"
-                >@Codescrum
-              </a>
-            </h2>
-            <p class="experience__entry-date paragraph">
-              May 2021 - August 2022
-            </p>
-            <p class="experience__entry-description paragraph">
-              I was part of the Marketing and Innovation team contributing as
-              Webmaster and Customer support for some of the company's products:
-            </p>
+          <div class="experience__entries">
+            <div class="experience__entry">
+              <h2 class="experience__entry-title heading_s heading_quicksand">
+                Customer Support & Web Master
+                <a
+                  href="https://www.codescrum.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="link"
+                  >@Codescrum
+                </a>
+              </h2>
+              <p class="experience__entry-date paragraph">
+                May 2021 - August 2022
+              </p>
+              <p class="experience__entry-description paragraph">
+                I was part of the Marketing and Innovation team contributing as
+                Webmaster and Customer support for some of the company's
+                products:
+              </p>
 
-            <ul class="experience__entry-tasks">
-              <li class="experience__entry-task">
-                <p class="paragraph">
-                  Worked with a Designer and Marketeers to design, create, and
-                  maintain the websites for all the products that the company
-                  had at that moment.
-                </p>
-              </li>
-              <li class="experience__entry-task">
-                <p class="paragraph">
-                  Implemented and worked as Customer Support for some of the
-                  company's products using the
-                  <a href="http://tawk.to" target="_blank" class="link"
-                    >Tawk.to</a
-                  >
-                  platform.
-                </p>
-              </li>
-            </ul>
+              <ul class="experience__entry-tasks">
+                <li class="experience__entry-task">
+                  <p class="paragraph">
+                    Worked with a Designer and Marketeers to design, create, and
+                    maintain the websites for all the products that the company
+                    had at that moment.
+                  </p>
+                </li>
+                <li class="experience__entry-task">
+                  <p class="paragraph">
+                    Implemented and worked as Customer Support for some of the
+                    company's products using the
+                    <a href="http://tawk.to" target="_blank" class="link"
+                      >Tawk.to</a
+                    >
+                    platform.
+                  </p>
+                </li>
+              </ul>
+            </div>
           </div>
         </article>
 
@@ -453,7 +458,9 @@
 
       <section id="youtube" class="youtube section">
         <article class="youtube__title-container article">
-          <h1 class="heading heading_xl heading_streamster">YouTube</h1>
+          <h1 class="heading heading_xl heading_streamster section-heading">
+            YouTube
+          </h1>
         </article>
         <article class="youtube__description article">
           <p class="paragraph">
@@ -580,7 +587,9 @@
 
       <section id="contact" class="contact section">
         <article class="contact__title-container article">
-          <h1 class="heading heading_xl heading_streamster">Contact me</h1>
+          <h1 class="heading heading_xl heading_streamster section-heading">
+            Contact me
+          </h1>
         </article>
         <article class="contact__description article">
           <p class="paragraph">
