🖥  Desktop view: 'YouTube' section basic layout added

--- a/src/index.html
+++ b/src/index.html
@@ -464,9 +464,14 @@
         </article>
         <article class="youtube__description article">
           <p class="paragraph">
-            I'm exploring the world of content creation to share knowledge. I'm
-            always learning about software development and so much more, so I
-            think the best way to really learn something is by teaching it.
+            I'm exploring the world of
+            <strong> content creation to share knowledge</strong>. I'm always
+            learning about software development and so much more, so I think
+            <strong
+              ><i>
+                the best way to really learn something is by teaching it.</i
+              ></strong
+            >
           </p>
           <p class="paragraph">
             My goal with this project is to help people to find their way into
