🖥  Desktop view: 'Contact' section basic layout added

--- a/src/index.html
+++ b/src/index.html
@@ -597,16 +597,16 @@
           </h1>
         </article>
         <article class="contact__description article">
-          <p class="paragraph">
+          <p class="paragraph badge-message">
             I'm currently looking for a new job opportunity as a
             <strong>Jr. Front-end Developer</strong>, if you think I can fit
             into your team, please fill out the form, and I will reply as soon
             as possible.
           </p>
           <p class="paragraph">
-            f you just have a question or want to give me some feedback, or just
-            want to say hi, don't hesitate to fill out the form, I'll be glad to
-            reply to you.
+            If you just have a question or want to give me some feedback, or
+            just want to say hi, don't hesitate to fill out the form, I'll be
+            glad to reply to you.
           </p>
         </article>
         <article class="contact__form-container article">
