⚙ JavaScript: Fetching and rendering the GitHub stats of the portfolio website repository

--- a/src/index.html
+++ b/src/index.html
@@ -673,22 +673,22 @@
             >
           </p>
           <span class="footer__github-stats-container">
-            <span id="githubStars" class="footer__github-stat"
+            <span class="footer__github-stat"
               ><img
                 class="footer__github-icon"
                 src="assets/icons/star_blue.png"
                 alt="star icon"
               />
-              1.698
+              <span id="githubStars">0</span>
             </span>
 
-            <span id="githubForks" class="footer__github-stat"
+            <span class="footer__github-stat"
               ><img
                 class="footer__github-icon"
                 src="assets/icons/fork_blue.png"
                 alt="fork icon"
               />
-              245
+              <span id="githubForks">0</span>
             </span>
           </span>
         </a>
