🔧: Index file moved to root directory

--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
     <link
       rel="stylesheet"
-      href="./css/tablet.css"
+      href="./src/css/tablet.css"
       media="screen and (min-width: 768px)"
     />
     <link
       rel="stylesheet"
-      href="./css/desktop-s.css"
+      href="./src/css/desktop-s.css"
       media="screen and (min-width: 1024px)"
     />
     <link
       rel="stylesheet"
-      href="./css/desktop.css"
+      href="./src/css/desktop.css"
       media="screen and (min-width: 1440px)"
     />
-    <script src="./js/style.js" defer></script>
-    <script src="./js/main.js" defer></script>
+    <script src="./src/js/style.js" defer></script>
+    <script src="./src/js/main.js" defer></script>
     <title>Neon Ghost Dev</title>
   </head>
 
@@ -41,7 +41,7 @@
       <div class="header__container header__container--no-background">
         <a class="header__logo-link" href="/">
           <img
-            src="./assets/images/neon_ghost_logo_v2.png"
+            src="./src/assets/images/neon_ghost_logo_v2.png"
             alt="logo"
             class="header__logo"
           />
@@ -65,7 +65,7 @@
         <img
           id="burgerIcon"
           class="header__burger-icon"
-          src="./assets/icons/menu_gradient_blue_light.png"
+          src="./src/assets/icons/menu_gradient_blue_light.png"
           alt="menu"
         />
       </div>
@@ -73,7 +73,7 @@
       <nav class="mobile-menu mobile-menu--hidden" id="mobileMenu">
         <img
           id="closeMenuIcon"
-          src="./assets/icons/menu_close_gradient_blue_ligth.png"
+          src="./src/assets/icons/menu_close_gradient_blue_ligth.png"
           alt="close-menu"
           class="mobile-menu__close-icon"
         />
@@ -301,7 +301,7 @@
         <article class="hero__scroll-button-container">
           <img
             class="hero__scroll-arrow-down"
-            src="./assets/icons/down_arrow_blue_gradient.png"
+            src="./src/assets/icons/down_arrow_blue_gradient.png"
             alt=""
           />
           <a href="#about" class="hero__scroll-button">
@@ -310,7 +310,7 @@
 
           <img
             class="hero__scroll-arrow-down"
-            src="./assets/icons/down_arrow_blue_gradient.png"
+            src="./src/assets/icons/down_arrow_blue_gradient.png"
             alt=""
           />
         </article>
@@ -348,22 +348,22 @@
             <div class="about__technologies-logos">
               <img
                 class="technology-logo"
-                src="assets/icons/html_logo.png"
+                src="./src/assets/icons/html_logo.png"
                 alt="HTML Logo"
               />
               <img
                 class="technology-logo"
-                src="assets/icons/css_logo.png"
+                src="./src/assets/icons/css_logo.png"
                 alt="CSS Logo"
               />
               <img
                 class="technology-logo"
-                src="assets/icons/js_logo.png"
+                src="./src/assets/icons/js_logo.png"
                 alt="JavaScript Logo"
               />
               <img
                 class="technology-logo"
-                src="assets/icons/react_logo.png"
+                src="./src/assets/icons/react_logo.png"
                 alt="JavaScript Logo"
               />
             </div>
@@ -608,7 +608,7 @@
         >
           <img
             class="footer__social-logo"
-            src="assets/icons/github_blue.png"
+            src="./src/assets/icons/github_blue.png"
             alt="github logo"
           />
         </a>
@@ -620,7 +620,7 @@
         >
           <img
             class="footer__social-logo"
-            src="assets/icons/linkedin_blue.png"
+            src="./src/assets/icons/linkedin_blue.png"
             alt="linkedin logo"
           />
         </a>
@@ -631,7 +631,7 @@
         >
           <img
             class="footer__social-logo"
-            src="assets/icons/instagram_blue.png"
+            src="./src/assets/icons/instagram_blue.png"
             alt="instagram logo"
           />
         </a>
@@ -642,14 +642,14 @@
         >
           <img
             class="footer__social-logo logo_m"
-            src="assets/icons/youtube_blue.png"
+            src="./src/assets/icons/youtube_blue.png"
             alt="youtube logo"
           />
         </a>
         <a class="footer__social-link" href="mailto:ghost@neonghost.dev">
           <img
             class="footer__social-logo logo_m"
-            src="assets/icons/email_blue.png"
+            src="./src/assets/icons/email_blue.png"
             alt="email logo"
           />
         </a>
@@ -676,7 +676,7 @@
             <span class="footer__github-stat"
               ><img
                 class="footer__github-icon"
-                src="assets/icons/star_blue.png"
+                src="./src/assets/icons/star_blue.png"
                 alt="star icon"
               />
               <span id="githubStars">0</span>
@@ -685,7 +685,7 @@
             <span class="footer__github-stat"
               ><img
                 class="footer__github-icon"
-                src="assets/icons/fork_blue.png"
+                src="./src/assets/icons/fork_blue.png"
                 alt="fork icon"
               />
               <span id="githubForks">0</span>
