🔧: Footer message hover effect added to make link more noticeable

--- a/index.html
+++ b/index.html
@@ -661,10 +661,10 @@
           target="_blank"
         >
           <p class="footer__github-paragraph">
-            Desing & Built using HTML, CSS & JS
+            Desing & built using HTML, CSS & JS
           </p>
           <p class="footer__github-paragraph">
-            By
+            by
             <a
               class="link"
               href="https://github.com/neonghostdev"
