🔧: Open Graph metatags added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Neon Ghost Dev | Front-End Developer" />
+    <meta
+      property="og:description"
+      content="Hi!, I'm Neon Ghost, and I'm a self-taught front-end developer from Colombia 🇨🇴, I like to learn about and improve my knowledge of software development and I also like to share this knowledge with everybody that feels curious about the tech industry."
+    />
+    <meta
+      property="og:image"
+      content="./src/assets/images/neon_ghost_logo_v2.png"
+    />
+    <meta property="og:url" content="https://neonghost.dev" />
+    <meta property="og:type" content="website" />
     <link
       rel="shortcut icon"
       href="./src/assets/icons/ghost_icon.png"
