--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     />
     <meta property="og:url" content="https://neonghost.dev" />
     <meta property="og:type" content="website" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
     <link
       rel="shortcut icon"
       href="./src/assets/icons/ghost_icon.png"
