🔧: SEO basic meta tags (title, description, keywords) added

--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Neon Ghost Dev | Front-end Developer" />
+    <meta
+      name="description"
+      content="Hi!, I'm Neon Ghost, and I'm a self-taught front-end developer from Colombia 🇨🇴, I like to learn about software development and I also like to share this knowledge with everybody that feels curious about the tech industry."
+    />
+    <meta
+      name="keywords"
+      content="software, front-end, frontend, development, self-taught, content, creator, react, javascript, css, html, web, colombia"
+    />
     <meta property="og:title" content="Neon Ghost Dev | Front-End Developer" />
     <meta
       property="og:description"
-      content="Hi!, I'm Neon Ghost, and I'm a self-taught front-end developer from Colombia 🇨🇴, I like to learn about and improve my knowledge of software development and I also like to share this knowledge with everybody that feels curious about the tech industry."
+      content="Hi!, I'm Neon Ghost, and I'm a self-taught front-end developer from Colombia 🇨🇴, I like to learn about software development and I also like to share this knowledge with everybody that feels curious about the tech industry."
     />
     <meta
       property="og:image"
